[tool.poetry]
name = "verstka19-1"
version = "0.1.0"
description = ""
authors = ["Anaxuname <anaxuname@gmail.com>"]
readme = "README.md"
packages = [{include = "verstka19"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
